some changes from review. run spotless.